@@ -1,5 +1,8 @@
 UNRELEASED CHANGES:
 
+* Remove automatic birthday reminder creation when editing a contact
+* Use external list of countries, with translations and reliability
+* Fixes Contact search dropdown shows non-contacts that link to nowhere
 * Add ability to sort contact list by untagged contacts
 * Allow multiple imported fields and replace existing contacts
 
